--- a/trunk/doc/report.tex
+++ b/trunk/doc/report.tex
@@ -58,52 +58,46 @@ del rendimiento y se detalla el contenido restante del informe.
 \section{Motivaci\'on}
 
 En el \'area de c\'omputo de altas prestaciones los desarrolladores son en su
-mayor\'ia los especialistas del dominio del problema a investigar, las rutinas
-m\'as demandantes de c\'alculo son en su mayor\'ia cient\'ificas, y su
+mayor\'ia los especialistas del dominio del problema a investigar. Las rutinas
+m\'as demandantes de c\'alculo son en su mayor\'ia cient\'ificas y su
 complejidad hace posible su correcta implementaci\'on solo por especialistas
-en el dominio. Sin tener necesariamente conocimientos avanzados
-de programaci\'on y de optimizaci\'on de rendimiento. Este hecho resulta en
-menos tiempo para an\'alisis de resultados e impacta directamente en la
-productividad de cualquier grupo de investigaci\'on.
+en el dominio. Este hecho resulta en menos tiempo para an\'alisis de resultados
+e impacta directamente en la productividad de cualquier grupo de investigaci\'on.
 
 \bigskip
 
 Con mayor impacto que en otras \'areas de la computaci\'on, el c\'odigo
-optimizado puede ejecutarse \'ordenes de magnitud mejor que implementaciones
-directas \cite{mm-matrixmultiplicationtool}. Adem\'as, se utiliza
+optimizado puede ejecutarse \'ordenes de magnitud mejor que una implementaci\'on
+directa \cite{mm-matrixmultiplicationtool}. Adem\'as, se utiliza
 programaci\'on en paralelo para obtener la mayor cantidad disponible de
-capacidad de c\'omputo; aumentando la complejidad a\'un m\'as
-\cite{parallel-programming}.
+capacidad de c\'omputo; aumentando la complejidad de implementaci\'on y
+optimizaci\'on a\'un m\'as \cite{parallel-programming}.
 
 \bigskip
 
 El proceso de optimizaci\'on de una implementaci\'on termina entonces siendo
 hecho de modo artesanal, sin conocimiento de las herramientas disponibles y
-sus capacidades, y sin mucha informaci\'on cuantitativa para dirigir los
-esfuerzos de optimizaci\'on. Incluso se llega a preferir la implementaci\'on
-{\em ad-hoc} de algoritmos en lugar de la utilizaci\'on de librer\'ias ya
-disponibles, optimizadas profundamente y con correctitud comprobada por el
-paso del tiempo.
-
-\bigskip
-
-{\bf TBD}
+sus capacidades, y sin la utilizaci\'on de informaci\'on cuantitativa para dirigir los
+esfuerzos de optimizaci\'on. Incluso es frecuente la implementacion {\em ad-hoc}
+de algoritmos en lugar de la utilizaci\'on de librer\'ias ya disponibles, optimizadas
+profundamente y con correctitud comprobada por el paso del tiempo.
 
 \section{Alcance}
 
 Este trabajo considera principalmente los ambientes mayormente utilizados en
 el c\'omputo de aplicaciones de alto rendimiento. A trav\'es de las
-estad\'isticas mostradas por el Top 500 ({\tt http://www.top500.org}), se
+estad\'isticas mostradas por el Top500 \footnote{Ranking de supercomputadoras
+de acuerdo al benchmark Linpack, disponible en {\tt http://www.top500.org}.}, se
 puede determinar que los sistemas de memoria distribu\'ida corriendo sobre
-GNU/Linux son los m\'as uitlizados. Tambi\'en denominados sistemas Beowulf
-\cite{beowulf}.
+GNU/Linux, denominados sistemas Beowulf \cite{beowulf}, son los m\'as utilizados.
 
 \bigskip
 
-Se trata tambi\'en de resumir la experiencia que debe realizar cualquier
+Este trabajo resume tambi\'en la experiencia que debe realizar cualquier
 individuo en busca de las diferentes alternativas para el an\'alisis de
-rendimiento. Incluyendo la prueba de herramientas y la definici\'on de un
-procedimiento rudimentario de aplicaci\'on de las mismas.
+rendimiento. Incluyendo la selecci\'on y prueba de herramientas de soporte y la
+definici\'on de un procedimiento rudimentario para la aplicaci\'on sistem\'atica
+de las mismas.
 
 \section{Estado Actual}
 
@@ -919,14 +913,19 @@ para publicaci\'on de resultados de modelado o simulaci\'on.
 
 \begin{thebibliography}{9}
 
-\bibitem{fourier}
-  J. B. Joseph Fourier, \emph{Th\'eorie Analytique de la Chaleur}, Paris, 1822.
-
 \bibitem{mm-matrixmultiplicationtool}
   A. More,
   \emph{A Case Study on High Performance Matrix Multiplication},
   {\tt http://code.google.com/p/mm-matrixmultiplicationtool},
   2008.
+
+\bibitem{parallel-programming}
+  Paul E. McKenney,
+  \emph{Is Parallel Programming Hard, And, If So, What Can You Do About It?},
+  January, 2011.
+
+\bibitem{fourier}
+  J. B. Joseph Fourier, \emph{Th\'eorie Analytique de la Chaleur}, Paris, 1822.
 
 \bibitem{beowulf}
   T. Sterling, D. Savarese, D. J. Becker, J. E. Dorband, U. A. Ranawake,
@@ -1081,11 +1080,6 @@ para publicaci\'on de resultados de modelado o simulaci\'on.
   \emph{Introduction to the HPC Challenge Benchmark Suite}, ICL Technical Report,
   2005.  
   
-\bibitem{parallel-programming}
-  Paul E. McKenney,
-  \emph{Is Parallel Programming Hard, And, If So, What Can You Do About It?},
-  January, 2011.
-
 \bibitem{gsl}
   Free Software Foundation (FSF), \emph{GNU Scientific Library (GSL)},
   {\tt http://www.gnu.org/software/gsl}.
